fix(kanban-view): apply overflow styling only to the task view

--- a/src/components/layouts/dashboard/dashboard-layout.module.scss
+++ b/src/components/layouts/dashboard/dashboard-layout.module.scss
@@ -1,29 +1,28 @@
 .container {
+  box-sizing: border-box;
   display: grid;
   grid-template-columns: 1fr;
   position: relative;
   z-index: 5000;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 .sidebar {
-  height: 100vh;
+  height: 100%;
   position: absolute;
 }
 
 @media (min-width: 768px) {
   .container {
-    box-sizing: border-box;
     padding: 2rem;
     grid-template-columns: min-content 1fr;
-    grid-template-areas: "side content";
+    grid-template-rows: 100%;
     gap: 2rem;
   }
   .sidebar {
-    height: 100%;
     position: relative;
-    grid-area: side;
   }
   .content {
-    grid-area: content;
+    overflow: hidden;
   }
 }
