--- a/src/components/layouts/tasks-dashboard/tasks-dashboard.module.scss
+++ b/src/components/layouts/tasks-dashboard/tasks-dashboard.module.scss
@@ -7,8 +7,12 @@
 @media (min-width: 768px) {
   .container {
     gap: 1rem;
+    height: 100%;
   }
   .header {
     margin-bottom: 1rem;
+  }
+  .content {
+    overflow: auto;
   }
 }
