--- a/src/features/tasks/kanban-view/kanban-view.module.scss
+++ b/src/features/tasks/kanban-view/kanban-view.module.scss
@@ -5,7 +5,7 @@
   gap: 2rem;
   width: 100vw;
   height: calc(100vh - 112px);
-  overflow-x: auto;
+  overflow: auto;
   padding: 20px 1rem 1rem 1rem;
 }
 .column {
@@ -23,8 +23,7 @@
 @media (min-width: 768px) {
   .container {
     width: auto;
-    height: calc(100vh - 112px);
-    overflow-x: initial;
+    height: auto;
     padding: 0;
   }
   .column {
